--- a/styles.css
+++ b/styles.css
@@ -1032,6 +1032,65 @@ button:hover {
     color: #00ff3c;
 }
 
+/*/////////////////////////CHAT//////////////////////*/
+
+.chat-button {
+    position: fixed;
+    bottom: 20px;
+    left: 20px;
+    background-color: #00ff3c00;
+    color: #000000;
+    border: none;
+    border-radius: 50%;
+    padding: 15px;
+    cursor: pointer;
+    font-size: 24px;
+    z-index: 1000;
+    transition: background-color 0.3s ease-in-out;
+}
+
+.chat-button:hover {
+    background-color: #00c12c;
+}
+
+.chat-modal {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.615);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1001;
+}
+
+.chat-modal-content {
+    background-color: #ffffff;
+    padding: 0;
+    border-radius: 25px;
+    width: 90%;
+    max-width: 550px;
+    height: 80%;
+    position: relative;
+}
+
+.close-chat-modal {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    font-size: 24px;
+    cursor: pointer;
+    z-index: 10;
+}
+
+
+
+.hidden {
+    display: none;
+}
+
 
 
 
