--- a/styles.css
+++ b/styles.css
@@ -1037,12 +1037,13 @@ button:hover {
 .chat-button {
     position: fixed;
     bottom: 20px;
-    left: 20px;
+    right: 20px;
     background-color: #00ff3c00;
     color: #000000;
     border: none;
     border-radius: 50%;
     padding: 15px;
+    padding-bottom: -35px;
     cursor: pointer;
     font-size: 24px;
     z-index: 1000;
@@ -1050,36 +1051,50 @@ button:hover {
 }
 
 .chat-button:hover {
-    background-color: #00c12c;
+   scale: 1.1;
 }
 
+
+.chat-modal-main {
+    width:100%; 
+    height:100%;
+    /* right: 2rem;
+    left: 2rem;  */
+    border:none; 
+    background-color: #00000000;
+    border-radius: 25px;
+    box-shadow: 0 0 25px 15px #000000;
+    margin-bottom: 35rem;
+    
+}
+
+
 .chat-modal {
+    bottom: 10%;
+    right: 40px;
     position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.615);
-    display: flex;
+    width: 20%;
+    height: 62%;
+    background-color: rgba(148, 8, 8, 0);
+    display: absolute;
     justify-content: center;
     align-items: center;
     z-index: 1001;
 }
 
 .chat-modal-content {
-    background-color: #ffffff;
+    background-color: #e2080800;
     padding: 0;
     border-radius: 25px;
-    width: 90%;
-    max-width: 550px;
-    height: 80%;
+    width: 100%;
+    height: 100%;
     position: relative;
 }
 
 .close-chat-modal {
     position: absolute;
-    top: 10px;
-    right: 10px;
+    top: 20px;
+    right: 20px;
     font-size: 24px;
     cursor: pointer;
     z-index: 10;
@@ -1223,4 +1238,24 @@ button:hover {
         border-radius: 25px;
         background-color: #000;
     }
+
+
+
+    .chat-button {
+        display: none;
+    }
+    
+
+    
+    
+    .chat-modal-main {
+display: none;
+        
+    }
+    
+    
+    .chat-modal {
+        display: none;
+    }
+
 }
