--- a/styles.css
+++ b/styles.css
@@ -1253,20 +1253,31 @@ button:hover {
 
 
     .chat-button {
-        display: none;
+       
     }
     
 
     
-    
-    .chat-modal-main {
-display: none;
-        
+    .chat-modal {
+        bottom: 0px;
+        right: 0px;
+        position: fixed;
+        width: 100%;
+        height: 100%;
+        background-color: rgb(0, 0, 0);
+        display: absolute;
+        justify-content: center;
+        align-items: center;
+        z-index: 1001;
     }
     
-    
-    .chat-modal {
-        display: none;
+    .chat-modal-content {
+        background-color: #e2080800;
+        padding: 0;
+        border-radius: 25px;
+        width: 100%;
+        height: 100%;
+        position: relative;
     }
 
 }
